--- a/main_content.html
+++ b/main_content.html
@@ -70,7 +70,7 @@
     <ul>
       <li><a href="#" target="_blank">📖 Grade 9 chemistry eBook</a></li>
       <li><a href="https://youtu.be/jvUITF_Qbx8" target="_blank">🎥 Live Online Lecture 1 - Dr Surya</a></li>
-       <li><a href="#" target="_blank">🎥 Live Online Lecture 2- Dr Surya</a></li>
+       <li><a href="#" target="_blank">🎥 Live Online Lecture 2- Mr Devansh</a></li>
       <li><a href="#" target="_blank">📺 Self E-Learning Video - Lecture 1</a></li>
        <li><a href="#" target="_blank">📺 Self E-Learning Video - Lecture 2</a></li>
     </ul>
