--- a/main_content.html
+++ b/main_content.html
@@ -68,7 +68,7 @@
   <main>
   <h2>Chemistry Section! 🎉</h2>
     <ul>
-      <li><a href="#" target="_blank">📖 Grade 9 chemistry eBook</a></li>
+      <li><a href="https://docs.google.com/document/d/1LbDyF3MqsyMgEy7IYSfhqOapMGKjewk98uiQnioN7FQ/edit?usp=sharing"_blank">📖 Grade 9 chemistry eBook</a></li>
       <li><a href="https://youtu.be/jvUITF_Qbx8" target="_blank">🎥 Live Online Lecture 1 - Dr Surya</a></li>
        <li><a href="#" target="_blank">🎥 Live Online Lecture 2- Mr Devansh</a></li>
       <li><a href="#" target="_blank">📺 Self E-Learning Video - Lecture 1</a></li>
@@ -79,7 +79,7 @@
   <main>
   <h2>Biology Section! 🎉</h2>
     <ul>
-     <li><a href="#" target="_blank">📖 Grade 9 Biology eBook</a></li>
+     <li><a href="https://docs.google.com/document/d/1LbDyF3MqsyMgEy7IYSfhqOapMGKjewk98uiQnioN7FQ/edit?usp=sharing" target="_blank">📖 Grade 9 Biology eBook</a></li>
      
        <li><a href="#" target="_blank">🎥 Live Online Lecture 1 </a></li>
      
