--- a/main_content.html
+++ b/main_content.html
@@ -71,6 +71,8 @@
       <li><a href="https://docs.google.com/document/d/1LbDyF3MqsyMgEy7IYSfhqOapMGKjewk98uiQnioN7FQ/edit?usp=sharing"_blank">📖 Grade 9 chemistry eBook</a></li>
       <li><a href="https://youtu.be/jvUITF_Qbx8" target="_blank">🎥 Live Online Lecture 1 - Dr Surya</a></li>
        <li><a href="https://youtu.be/LhSwGUIQt54" target="_blank">🎥 Live Online Lecture 2- Mr Devansh</a></li>
+       <li><a href="https://youtu.be/C8eVhhp06Sk" target="_blank">🎥 Live Online Lecture 3- Mr Devansh</a></li>
+      https://youtu.be/C8eVhhp06Sk
       <li><a href="#" target="_blank">📺 Self E-Learning Video - Lecture 1</a></li>
        <li><a href="#" target="_blank">📺 Self E-Learning Video - Lecture 2</a></li>
     </ul>
