--- a/main_content.html
+++ b/main_content.html
@@ -72,7 +72,9 @@
       <li><a href="https://youtu.be/jvUITF_Qbx8" target="_blank">🎥 Live Online Lecture 1 - Dr Surya</a></li>
        <li><a href="https://youtu.be/LhSwGUIQt54" target="_blank">🎥 Live Online Lecture 2- Mr Devansh</a></li>
        <li><a href="https://youtu.be/C8eVhhp06Sk" target="_blank">🎥 Live Online Lecture 3- Mr Devansh</a></li>
-      https://youtu.be/C8eVhhp06Sk
+       <li><a href="https://youtu.be/Lcz_MPDj0ask" target="_blank">🎥 Live Online Lecture 3- Mr Devansh</a></li>
+      
+     
       <li><a href="#" target="_blank">📺 Self E-Learning Video - Lecture 1</a></li>
        <li><a href="#" target="_blank">📺 Self E-Learning Video - Lecture 2</a></li>
     </ul>
